[gd_scene load_steps=5 format=2]

[ext_resource path="res://sprites/buttons or icons/sound off icon.png" type="Texture" id=1]
[ext_resource path="res://sprites/buttons or icons/sound on icon.png" type="Texture" id=2]
[ext_resource path="res://Audio/GenericMusic.gd" type="Script" id=3]
[ext_resource path="res://sprites/audio/Generic Music - And The Journey Begins.wav" type="AudioStream" id=4]

[node name="GenericMusic" type="CanvasLayer"]
script = ExtResource( 3 )

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="PlayButton" type="TextureButton" parent="."]
margin_left = 3.39553
margin_top = 11.102
margin_right = 129.396
margin_bottom = 104.102
texture_normal = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MuteButton" type="TextureButton" parent="."]
margin_left = -0.267773
margin_top = 1.76523
margin_right = 157.733
margin_bottom = 124.765
texture_normal = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="MuteButton" to="." method="_on_MuteButton_pressed"]
